# nbprint

./: .buildinfo  .bumpversion.cfg  .copier-answers.yaml  .copier-answers.yml  .gitattributes  .gitignore  .travis.yml  CNAME  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  NOTES.md  README.html  README.md  ROADMAP.html  ROADMAP.md  abc.tplx  genindex.html  index.html  lerna  objects.inv  pyproject.toml  requirements.txt  sample.html  sample.ipynb  search.html  searchindex.js  setup.cfg  setup.py  tags.py
.doctrees/: README.doctree  ROADMAP.doctree  environment.pickle  index.doctree
.doctrees/.github/: CODE_OF_CONDUCT.doctree  pull_request_template.doctree
.doctrees/examples/: basic.doctree  notebook-overlays.doctree  notebook-page-boxes.doctree  notebook-runtime.doctree  notebook-sections.doctree  parameters.doctree  shortcircuit.doctree
.doctrees/outputs/: basic-2025-11-23-1.doctree  basic-2025-11-23-2.doctree  basic-2025-11-23-3.doctree  basic-2025-11-23.doctree  basic-2025-11-23.executed.doctree  finance-2025-11-23.doctree  finance-2025-11-23.executed.doctree  greattables-2025-11-23.doctree  greattables-2025-11-23.executed.doctree  inline-2025-11-23.doctree  inline-2025-11-23.executed.doctree  landscape-2025-11-23.doctree  landscape-2025-11-23.executed.doctree  nonpagedjs-2025-11-23.doctree  nonpagedjs-2025-11-23.executed.doctree  parameters-2025-11-23.doctree  parameters-2025-11-23.executed.doctree  plotly-2025-11-23.doctree  plotly-2025-11-23.executed.doctree  research-2025-11-23.doctree  research-2025-11-23.executed.doctree  shortcircuit-2025-11-23.doctree  shortcircuit-2025-11-23.executed.doctree  test-2025-11-23.doctree  test-2025-11-23.executed.doctree
.doctrees/rfc3339_validator-0.1.4.dist-info/: AUTHORS.doctree
.doctrees/rfc3986_validator-0.1.1.dist-info/: AUTHORS.doctree
.doctrees/webencodings-0.5.1.dist-info/: DESCRIPTION.doctree
.github/: CODE_OF_CONDUCT.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yaml  build.yml  copier.yaml  docs.yaml  publish.yml
_modules/: index.html
_modules/nbprint/: cli.html
_sources/: README.md.txt  index.md.txt
_sources/examples/: basic.ipynb.txt
_sources/outputs/: basic-2025-11-23-1.ipynb.txt  basic-2025-11-23-2.ipynb.txt  basic-2025-11-23-3.ipynb.txt  basic-2025-11-23.executed.ipynb.txt  basic-2025-11-23.ipynb.txt  finance-2025-11-23.executed.ipynb.txt  finance-2025-11-23.ipynb.txt  greattables-2025-11-23.executed.ipynb.txt  greattables-2025-11-23.ipynb.txt  inline-2025-11-23.executed.ipynb.txt  inline-2025-11-23.ipynb.txt  landscape-2025-11-23.executed.ipynb.txt  landscape-2025-11-23.ipynb.txt  nonpagedjs-2025-11-23.executed.ipynb.txt  nonpagedjs-2025-11-23.ipynb.txt  parameters-2025-11-23.executed.ipynb.txt  parameters-2025-11-23.ipynb.txt  plotly-2025-11-23.executed.ipynb.txt  plotly-2025-11-23.ipynb.txt  research-2025-11-23.executed.ipynb.txt  research-2025-11-23.ipynb.txt  shortcircuit-2025-11-23.executed.ipynb.txt  shortcircuit-2025-11-23.ipynb.txt  test-2025-11-23.executed.ipynb.txt  test-2025-11-23.ipynb.txt
_static/styles/: custom.css
bleach/_vendor/: README.html
ccflow/examples/: narwhals_pipelines.html
deprecated-1.3.1.dist-info/licenses/: LICENSE.html
docs/: Makefile  api.md  conf.py  make.bat  requirements.txt
docs/src/: api.html  api.md  architecture.html  architecture.md  background.html  background.md  configuration.html  configuration.md
emails-1.1.2.dist-info/licenses/: AUTHORS.html
example_notebooks/: template1.ipynb  template2.ipynb
examples/: basic.html  basic.ipynb  basic.yaml  chapters.yaml  customsize.yaml  example.yaml  finance.yaml  greattables.yaml  hydra.yaml  inline.yaml  landscape.yaml  news.yaml  nonpagedjs.yaml  notebook-overlays.html  notebook-overlays.ipynb  notebook-page-boxes.html  notebook-page-boxes.ipynb  notebook-runtime.html  notebook-runtime.ipynb  notebook-sections.html  notebook-sections.ipynb  parameters.html  parameters.ipynb  plotly.yaml  research.yaml  research.yml  sections.yaml  shortcircuit.html  shortcircuit.ipynb  template2.html
examples/basic/: example.yaml
examples/finance/: example.yaml  finance.css
examples/hydra/: README.html  README.md
examples/news/: example.yaml
httpcore-1.0.9.dist-info/licenses/: LICENSE.html
httpx-0.28.1.dist-info/licenses/: LICENSE.html
hydra_plugins/nbprint/: __init__.py
idna-3.18.dist-info/licenses/: LICENSE.html
ipython-9.14.0.dist-info/licenses/: COPYING.html
ipython-9.14.1.dist-info/licenses/: COPYING.html
ipython-9.15.0.dist-info/licenses/: COPYING.html
js/: .eslintrc.js  build.mjs  integration.config.js  package.json  playwright.config.js  pnpm-lock.yaml  pnpm-workspace.yaml
js/patches/: pagedjs@0.4.3.patch
js/tests/: index.spec.js  integration-visual.spec.js  integration.setup.mjs  integration.spec.js  (+4 more)
nbcx/: __init__.py  config.py  generate.py  tags.py
nbcx_templates/: tags.py  utils.py
nbprint/: __init__.py  cli.py  generate.py  plugin.py
outputs/: basic-2025-11-23-1.html  basic-2025-11-23-2.html  basic-2025-11-23-3.html  basic-2025-11-23.executed.html  basic-2025-11-23.html  basic-2025-11-24.html  basic-2025-11-26.html  basic-2025-12-01.html  basic-2025-12-03.html  basic-2025-12-04.html  basic-2025-12-14.html  basic-2026-01-01.html  basic-2026-02-01.html  basic-2026-02-22.html  basic-2026-03-02.html  basic-2026-03-09.html  basic-2026-03-20.html  basic-2026-03-21.html  basic-2026-03-30.html  basic-2026-04-01.html  basic-2026-04-06.html  basic-2026-06-08.html  basic-2026-06-12.html  basic-2026-06-13.html  basic-2026-06-14.html  basic-2026-06-18.html  basic-2026-06-21.html  basic-2026-06-22.html  basic-2026-06-28.html  basic-2026-07-01.html  basic-2026-07-10.html  basic-2026-07-11.html  basic-2026-07-12.html  basic.html  e2e_notebook-2026-06-08.html  e2e_notebook-2026-06-12.html  e2e_notebook-2026-06-13.html  e2e_notebook-2026-06-14.html  e2e_notebook-2026-06-18.html  e2e_notebook-2026-06-21.html  (+86 more)
rfc3339_validator-0.1.4.dist-info/: AUTHORS.html
rfc3986_validator-0.1.1.dist-info/: AUTHORS.html
webencodings-0.5.1.dist-info/: DESCRIPTION.html
(+570 files in other folders)
